force-app/main/default/objects/Sensor_Event__c/Sensor_Event__c.object-meta.xml
<CustomObject>
    <label>Sensor Event</label>
    <nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Sensor Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensor Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>