force-app/main/default/objects/Sensor_Event__c/fields/Modulus_Vector_Length__c.field-meta.xml
<CustomField>
    <fullName>Modulus_Vector_Length__c</fullName>
    <formula>SQRT(x__c^2+y__c^2+z__c^2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modulus Vector Length</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>