force-app/main/default/objects/Sensor_Event__c/fields/x__c.field-meta.xml
<CustomField>
    <fullName>x__c</fullName>
    <label>x</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>