force-app/main/default/objects/Sensor_Event__c/fields/z__c.field-meta.xml
<CustomField>
    <fullName>z__c</fullName>
    <label>z</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>